--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -14,7 +14,13 @@
 					<ul class="menu-principal">
 			 		<li><a href="#"> Inicio</a></li>
 			 		<li><a href="#"> Novidades</a></li>
-			 		<li><a href="#">Dicas de Maquiagem</a></li>	
+					<li><a href="#">Produtos</a>
+					<ul>
+						<li><a href="#">Olhos</a></li>
+						<li><a href="#">Boca</a></li>
+					</ul>
+					</li>
+			 		<li><a href="#">Dicas </a></li>	
 			 		<li><a href="#">Fale Conosco</a></li>
 			 		<li><a href="#">Quem Somos</a></li>		
 					</ul>
