--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -13,16 +13,16 @@
 				<nav class="menu">
 					<ul class="menu-principal">
 			 		<li><a href="#"> Inicio</a></li>
-			 		<li><a href="#"> Novidades</a></li>
-					<li><a href="#">Produtos</a>
+			 		<li><a href="novidade.html"> Novidades</a></li>
+					<li><a href="Produtos.html">Produtos</a>
 					<ul>
 						<li><a href="#">Olhos</a></li>
 						<li><a href="#">Boca</a></li>
 					</ul>
 					</li>
-			 		<li><a href="#">Dicas </a></li>	
+			 		<li><a href="Dicas.html">Dicas </a></li>	
 			 		<li><a href="FaleConosco.html">Fale Conosco</a></li>
-			 		<li><a href="#">Quem Somos</a></li>		
+			 		<li><a href="QuemSomos.html">Quem Somos</a></li>		
 					</ul>
 				</nav>
 			
